test/fail/tuple_underscore_access.zn
# ERRORS: 2
func main() {
    var t = (1, 2)
    var a = t._0
    var b = t._1
    0
}
